--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGO_URI=mongodb+srv://andreaLeal:Dty654jmi175+@cluster0.ejdoe8c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://andreaLeal:Dty654jmi175@cluster0.ejdoe8c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGO_DBNAME=ecommerceTD
